--- a/_posts/2025-03-02-localmac.md
+++ b/_posts/2025-03-02-localmac.md
@@ -15,4 +15,5 @@ categories: GitHub Blog
 - Git을 통한 버전 관리
 - 터미널에서 간단한 명령어로 포스트 배포
 
-앞으로 더 많은 기술 관련 포스트를 작성하며 블로그를 발전시켜 나가겠습니다.
+앞으로 잘 배워서 블로그 꾸준히 꾸며보겠습니다.
+천천히꾸준히!아자!!복리의마법으로!!!
