localmac.md 내용 변경

--- a/_posts/2025-03-02-localmac.md
+++ b/_posts/2025-03-02-localmac.md
@@ -14,6 +14,7 @@ categories: GitHub Blog
 - 로컬 환경에서 블로그 미리보기
 - Git을 통한 버전 관리
 - 터미널에서 간단한 명령어로 포스트 배포
+- windsurf로 커밋 푸시 해보기
 
 앞으로 잘 배워서 블로그 꾸준히 꾸며보겠습니다.
 천천히꾸준히!아자!!복리의마법으로!!!
