--- a/_posts/2025-03-02-localmac.md
+++ b/_posts/2025-03-02-localmac.md
@@ -7,7 +7,7 @@ categories: GitHub Blog
 
 ## GitHub 블로그와 Mac 로컬 저장소 연동 완료
 
-로컬 Mac 환경에서 마크다운으로 작성한 포스트를 GitHub 블로그에 업로드할 수 있도록 연동을 완료했습니다.
+로컬 Mac 환경에서 마크다운으로 작성한 포스트를 GitHub 블로그에 업로드할 수 있도록 연동을 완료했습니다.  
 이제 다음과 같은 작업이 가능합니다:
 
 - Mac에서 직접 마크다운 파일 작성 및 수정
@@ -15,6 +15,7 @@ categories: GitHub Blog
 - Git을 통한 버전 관리
 - 터미널에서 간단한 명령어로 포스트 배포
 - windsurf로 커밋 푸시 해보기 > 안되서 VSCode에서 다시 실행 > 완료
+- 줄바꿈 하기는 스페이스 2번 이상
 
-앞으로 잘 배워서 블로그 꾸준히 꾸며보겠습니다.
+앞으로 잘 배워서 블로그 꾸준히 꾸며보겠습니다.  
 천천히꾸준히!아자!!복리의마법으로!!!
